src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_alternate_screen_round_trip__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
primary-before [m
primary-restored[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
