src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_alternate_screen_round_trip__tmux.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
primary-before      
primary-restored
